--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -15,6 +15,8 @@
 #   Browse user installed themes in `data/themes/`
 theme = "minimal"
 
+i_am_a_sponsor = true
+
 # Enable users to switch between day and night mode?
 day_night = false
 
