--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -16,7 +16,7 @@ baseurl = "https://hausanlp.github.io/"
 
 # Enter a copyright notice to display in the site footer.
 # To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
-copyright = "&copy; HausaNLP Research Group"
+copyright = "&copy; HausaNLP Research Group. Maintained by Shamsuddeen Muhammad"
 
 ############################
 ## Advanced options below ##
