--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -16,15 +16,15 @@
   weight = 20
   
 [[main]]
-  name = "News"
+  name = "Blog"
   url = "post"
-  weight = 30
+  weight = 40
 
 
 [[main]]
   name = "Publications"
   url = "publication"
-  weight = 40
+  weight = 30
   
 [[main]]
   name = "Projects"
